workspace-sf/force-app/main/default/objects/BeneficioContrato__c/BeneficioContrato__c.object-meta.xml
<CustomObject>
    <description>Objeto de relacionamento entre o contrato e o tipo de beneficio.</description>
    <label>Beneficio do contrato</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beneficios do contrato</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>