workspace-sf/force-app/main/default/objects/BeneficioContrato__c/fields/CodigoVoucher__c.field-meta.xml
<CustomField>
    <fullName>CodigoVoucher__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Codigo do Voucher</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>