workspace-sf/force-app/main/default/objects/BeneficioContrato__c/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <label>Contrato</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Beneficios do contrato</relationshipLabel>
    <relationshipName>BeneficiosContrato</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>