workspace-sf/force-app/main/default/objects/BeneficioContrato__c/fields/DataResgate__c.field-meta.xml
<CustomField>
    <fullName>DataResgate__c</fullName>
    <label>Data de resgate</label>
    <type>Date</type>
</CustomField>