workspace-sf/force-app/main/default/objects/BeneficioContrato__c/fields/TipoBeneficio__c.field-meta.xml
<CustomField>
    <fullName>TipoBeneficio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tipo de beneficio</label>
    <referenceTo>TipoBeneficio__c</referenceTo>
    <relationshipLabel>Beneficios do contrato</relationshipLabel>
    <relationshipName>BeneficiosContrato</relationshipName>
    <type>Lookup</type>
</CustomField>